--- a/.github/workflows/fod.yml
+++ b/.github/workflows/fod.yml
@@ -17,10 +17,10 @@ name: Fortify on Demand Scan
 on: 
  
   push:
-    branches: main
+    branches: master
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: main
+    branches: master
   
   
   
